--- a/APIChangesTushal/package.json
+++ b/APIChangesTushal/package.json
@@ -17,14 +17,17 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "next": "13.2.4",
+    "next-i18next": "^12.1.0",
     "pdf-viewer-reactjs": "^2.2.3",
     "pdfjs-dist": "^2.7.570",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-intl": "^6.3.2",
     "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sweetalert2": "^11.7.3",
